# denbi_summerschool2023_py_exercises

./: .gitignore  HCC_19_vs_19_miss.csv  README.md  environment.yml  exercises.ipynb  mass_spec.json  pyproject.toml  python_course_solutions.ipynb
